Fixed custom scrollbar.

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ body {
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
+  padding: 0;
 }
 
 .page-body {
@@ -36,7 +37,7 @@ body {
 
 .page-footer {
   text-align: center;
-  opacity: .6;
+  opacity: .5;
 }
 
 /* Scrollable content wrapper */
@@ -61,7 +62,7 @@ body {
   background: var(--lighter_red);
 }
 
-/* Scrollbar styling */
+/* WebKit (Chrome, Safari, Edge) Scrollbar Styling */
 .scroll-wrapper::-webkit-scrollbar {
   width: 12px;
 }
@@ -80,24 +81,30 @@ body {
   background-color: var(--lighter_red);
 }
 
+/* Scrollbar styling (home) */
+.scroll-wrapper-home::-webkit-scrollbar-track {
+  background: var(--off_white);
+}
+
 .scroll-wrapper-home::-webkit-scrollbar-thumb {
   background-color: var(--dark_red);
   border: 4px solid var(--off_white);
 }
 
-.scroll-wrapper::-webkit-scrollbar-thumb:hover {
+.scroll-wrapper-home::-webkit-scrollbar-thumb:hover {
   background-color: var(--light_red);
 }
 
-/* Firefox scrollbar */
-.scroll-wrapper {
-  scrollbar-width: thin;
-  scrollbar-color: var(--light_red) var(--off_black);
+@-moz-document url-prefix() {
+  .scroll-wrapper {
+    scrollbar-color: var(--light_red) var(--off_black);
+  }
+
+  .scroll-wrapper-home {
+    scrollbar-color: var(--dark_red) var(--off_white);
+  }
 }
 
-.scroll-wrapper-home {
-  scrollbar-color: var(--dark_red) var(--off_white);
-}
 
 /* Media queries */
 /* @media (max-height: 700px) {
